--- a/package.json
+++ b/package.json
@@ -8,10 +8,10 @@
     "start": "node server.js"
   },
   "author": "",
-  "license": "ISC",
+  "license": ,
   "dependencies": {
     "body-parser": "^1.19.0",
-    "express": "^4.17.1",
+    "express": "^",
     "mongoose": "^5.8.6",
     "nodemon": "^2.0.2"
   }
