--- a/buildspec.yml
+++ b/buildspec.yml
@@ -12,4 +12,4 @@ phases:
       - echo Building the Json code...
       - cd $CODEBUILD_SRC_DIR/user.js
       - cd $CODEBUILD_SCR_DIR/package-lock.json
-      - npm run test
+      - npm t run test
