--- a/buildspec.yml
+++ b/buildspec.yml
@@ -7,9 +7,8 @@ phases:
   build:
    commands:
      - echo Building the Json code...
-      - cd $CODEBUILD_SRC_DIR/package.json
-      - go build basic_server 
-      - echo Building the Json code...
-      - cd $CODEBUILD_SRC_DIR/user.js
-      - cd $CODEBUILD_SCR_DIR/package-lock.json
-      - npm t run test
+      - package.json
+      - basic_server 
+      - user.js
+      - package-lock.json
+      - npm run test
