--- a/buildspec.yml
+++ b/buildspec.yml
@@ -6,7 +6,11 @@ phases:
       nodejs: 10
   build:
    commands:
-     - echo Building the Json code...
+     build:
+    commands:
+      - echo Entered the Json code
+      - echo Build started on `date`
+      - mvn install
       - npm run test
       - package.json
       - basic_server 
