--- a/buildspec.yml
+++ b/buildspec.yml
@@ -3,14 +3,25 @@ version: 0.2
 phases:
   install:
     runtime-versions:
-      nodejs: 10
+      nodejs: 10  
+    commands:
+      - echo Installing Mocha...
+      - npm install -g mocha
+  pre_build:
+    commands:
+      - echo Installing source NPM dependencies...
+      - npm install
+      - npm install unit.js
   build:
-   commands:
-      - echo Bulid the Json code
+    commands:
       - echo Build started on `date`
-      - npm run build
-      - package.json
-      - basic_server 
-      - user.js
-      - package-lock.json
+      - echo Compiling the Node.js code
+      - mocha test.js
+  post_build:
+    commands:
+      - echo Build completed on `date`
+# Include only the files required for your application to run.
+# Do not use recursively include artifacts from node_modules directory as it will include unnecessary packages 
+# used only for building and testing.
+# ExpressJS apps will need other artifact directories included (bin/*, public/*, routes/*, views/* etc).
       
